--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -310,7 +310,7 @@
                             android:layout_height="0dp"
                             android:layout_weight="1"
                             android:ellipsize="end"
-                            android:fontFamily="@font/helvetica_bold"
+                            android:fontFamily="@font/din_font"
                             android:maxLines="2"
                             android:textColor="@color/color_BBBBBB_333333"
                             android:textSize="@dimen/textSize16sp"
@@ -322,7 +322,7 @@
                             android:id="@+id/tv_station_distance"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/helvetica_bold"
+                            android:fontFamily="@font/din_font"
                             android:textColor="@color/color_1A1A1A_0760D4"
                             android:textSize="@dimen/textSize18sp"
                             android:textStyle="bold"
@@ -385,7 +385,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawablePadding="5dp"
-                    android:fontFamily="@font/helvetica_bold"
+                    android:fontFamily="@font/din_font"
                     android:text="@string/local_time"
                     android:textColor="@color/color_414655"
                     android:textSize="@dimen/textSize12sp"
