--- a/app/src/main/res/layout/home_cate_tab.xml
+++ b/app/src/main/res/layout/home_cate_tab.xml
@@ -17,6 +17,7 @@
         android:textAllCaps="true"
         android:textColor="@color/color_select_blue_black"
         android:textSize="@dimen/textSize15sp"
+        android:textFontWeight="600"
         app:autoSizeMaxTextSize="15dp"
         app:autoSizeMinTextSize="2dp"
         app:autoSizeTextType="uniform"
@@ -31,7 +32,7 @@
         android:maxLines="1"
         android:textColor="@color/color_select_white_gray"
         android:textSize="@dimen/textSize12sp"
-        android:fontFamily="@font/helvetica_bold"
+        android:fontFamily="@font/din_font"
         app:autoSizeMaxTextSize="12dp"
         app:autoSizeMinTextSize="2dp"
         app:autoSizeTextType="uniform"
