--- a/app/src/main/res/layout/itemview_game_no_record.xml
+++ b/app/src/main/res/layout/itemview_game_no_record.xml
@@ -1,32 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingVertical="80dp"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:ignore="SpUsage">
+
 
     <ImageView
         android:id="@+id/list_no_record_img"
         android:layout_width="256dp"
-        android:layout_height="199dp"
-        android:src="@drawable/ic_no_data_img"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_no_data_img" />
 
     <TextView
         android:id="@+id/list_no_record_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-20dp"
         android:layout_marginBottom="2dp"
         android:text="@string/finance_list_no_record"
         android:textColor="@color/color_6C7BA8_A7B2C4"
         android:textSize="@dimen/textSize16sp"
-        android:textFontWeight="400"
-        app:layout_constraintEnd_toEndOf="@id/list_no_record_img"
-        app:layout_constraintStart_toStartOf="@id/list_no_record_img"
-        app:layout_constraintBottom_toBottomOf="@id/list_no_record_img" />
+        android:textFontWeight="400" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
