--- a/app/src/main/res/layout/itemview_sport_type_v6.xml
+++ b/app/src/main/res/layout/itemview_sport_type_v6.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:minWidth="60dp"
     android:paddingVertical="@dimen/margin_10"
+    android:paddingHorizontal="5dp"
     android:background="@color/color_141414_FCFCFC"
     tools:context=".ui.game.home.HomeGameCard"
     tools:ignore="SpUsage">
