--- a/app/src/main/res/drawable/bg_gray_stoke_radius_8.xml
+++ b/app/src/main/res/drawable/bg_gray_stoke_radius_8.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="1dp"
-        android:color="@color/color_E3E8EE" />
+        android:width="0.5dp"
+        android:color="@color/color_D4E1F1" />
     <corners android:radius="8dp" />
 </shape>
