--- a/app/src/main/res/drawable/bg_radius_4_button_odds_lock.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_odds_lock.xml
@@ -4,6 +4,6 @@
     <corners android:radius="4dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/color_EDEDED" />
-    <solid android:color="@color/color_F9F9F9" />
+        android:color="@color/color_DFE8F2" />
+    <solid android:color="@color/color_05025BE8" />
 </shape>
