--- a/app/src/main/res/layout/button_odd_home.xml
+++ b/app/src/main/res/layout/button_odd_home.xml
@@ -28,12 +28,13 @@
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/helvetica"
+                    android:fontFamily="@font/din_font"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:textColor="@color/selector_button_odd_top_text"
                     android:textSize="@dimen/textSize12sp"
                     android:paddingRight="5dp"
+                    android:textStyle="bold"
                     android:text=""
                     tools:textColor="@color/color_A7B2C4" />
 
@@ -41,10 +42,11 @@
                     android:id="@+id/tv_spread"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/helvetica"
+                    android:fontFamily="@font/din_font"
                     android:maxLines="1"
                     android:textColor="@color/selector_button_odd_top_text"
-                    android:textSize="@dimen/textSize10sp"
+                    android:textSize="@dimen/textSize12sp"
+                    android:textStyle="bold"
                     tools:text="-0.5/1"
                     tools:textColor="@color/color_A7B2C4" />
 
@@ -71,9 +73,10 @@
                     android:id="@+id/tv_odds"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/helvetica"
+                    android:fontFamily="@font/din_font"
                     android:textColor="@color/selector_button_odd_bottom_text"
                     android:textSize="@dimen/textSize14sp"
+                    android:textStyle="bold"
                     tools:text="1.067" />
             </LinearLayout>
 
