--- a/app/src/main/res/layout/button_odd_outright.xml
+++ b/app/src/main/res/layout/button_odd_outright.xml
@@ -41,6 +41,7 @@
                 android:maxLines="1"
                 android:textColor="@color/selector_button_odd_top_text"
                 android:textSize="@dimen/textSize14sp"
+                android:textStyle="bold"
                 tools:text="义大利"
                 tools:textColor="@color/color_535D76" />
 
@@ -56,6 +57,7 @@
                 android:maxLines="1"
                 android:textColor="@color/selector_button_odd_top_text"
                 android:textSize="@dimen/textSize10sp"
+                android:textStyle="bold"
                 tools:text="-0.5/1"
                 tools:textColor="@color/color_6C7BA8" />
 
@@ -82,6 +84,7 @@
                 android:includeFontPadding="false"
                 android:textColor="@color/selector_outright_button_odd_bottom_text"
                 android:textSize="@dimen/textSize15sp"
+                android:textStyle="bold"
                 tools:text="1.067" />
         </LinearLayout>
 
