--- a/app/src/main/res/layout/content_odds_detail_list_item.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_item.xml
@@ -31,6 +31,7 @@
             android:textSize="@dimen/textSize14sp"
             android:textAllCaps="true"
             android:fontFamily="@font/din_font"
+            android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/viewLeftLine"
             app:layout_constraintRight_toLeftOf="@+id/odd_detail_pin"
             app:layout_constraintTop_toTopOf="parent"
