--- a/app/src/main/res/layout/dialog_redenvelope_fail.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_fail.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="120dp"
-                android:fontFamily="@font/helvetica_bold"
+                android:fontFamily="@font/din_font"
                 android:text="@string/redenvelope_fail"
                 android:textColor="#8A8681"
                 android:textSize="@dimen/textSize24sp"
