--- a/app/src/main/res/layout/dialog_redenvelope_success.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_success.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/margin_50"
-                android:fontFamily="@font/helvetica_bold"
+                android:fontFamily="@font/din_font"
                 android:text="₱ 1,000.000"
                 android:textColor="#D88B53"
                 android:textSize="@dimen/textSize26sp"
