--- a/app/src/main/res/layout/fragment_main_left.xml
+++ b/app/src/main/res/layout/fragment_main_left.xml
@@ -42,7 +42,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="60dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -55,8 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
-                    android:paddingLeft="26dp"
-                    android:paddingRight="26dp">
+                    android:paddingLeft="26dp">
 
                     <ImageView
                         android:layout_width="@dimen/margin_20"
@@ -102,7 +101,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="64dp"
                     android:alpha="0.1"
                     android:background="@color/color_FFFFFF" />
             </LinearLayout>
@@ -117,8 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
-                    android:paddingLeft="26dp"
-                    android:paddingRight="26dp">
+                    android:paddingLeft="26dp">
 
                     <ImageView
                         android:layout_width="@dimen/margin_20"
@@ -144,7 +141,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="64dp"
                     android:alpha="0.1"
                     android:background="@color/color_FFFFFF" />
 
@@ -154,7 +150,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="5dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="26dp"
                     android:visibility="gone"
                     tools:itemCount="4"
                     tools:listitem="@layout/item_odds_type"
@@ -172,8 +167,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
-                    android:paddingLeft="26dp"
-                    android:paddingRight="26dp">
+                    android:paddingLeft="26dp">
 
                     <ImageView
                         android:layout_width="@dimen/margin_20"
@@ -199,7 +193,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="64dp"
                     android:alpha="0.1"
                     android:background="@color/color_FFFFFF" />
 
@@ -209,7 +202,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="5dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="26dp"
                     android:visibility="gone"
                     tools:itemCount="3"
                     tools:listitem="@layout/item_odds_type"
@@ -226,8 +218,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
-                    android:paddingLeft="26dp"
-                    android:paddingRight="26dp">
+                    android:paddingLeft="26dp">
 
                     <ImageView
                         android:layout_width="@dimen/margin_20"
@@ -261,7 +252,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="64dp"
                     android:alpha="0.1"
                     android:background="@color/color_FFFFFF" />
 
@@ -271,7 +261,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="5dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="26dp"
                     android:visibility="gone"
                     tools:itemCount="3"
                     tools:listitem="@layout/item_language"
@@ -289,8 +278,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
-                    android:paddingLeft="26dp"
-                    android:paddingRight="26dp">
+                    android:paddingLeft="26dp">
 
                     <ImageView
                         android:layout_width="@dimen/margin_20"
@@ -318,7 +306,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="64dp"
                     android:alpha="0.1"
                     android:background="@color/color_FFFFFF" />
             </LinearLayout>
@@ -333,8 +320,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
-                    android:paddingLeft="26dp"
-                    android:paddingRight="26dp">
+                    android:paddingLeft="26dp">
 
                     <ImageView
                         android:layout_width="@dimen/margin_20"
@@ -360,7 +346,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="64dp"
                     android:alpha="0.1"
                     android:background="@color/color_FFFFFF" />
             </LinearLayout>
@@ -375,8 +360,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
-                    android:paddingLeft="26dp"
-                    android:paddingRight="26dp">
+                    android:paddingLeft="26dp">
 
                     <ImageView
                         android:layout_width="@dimen/margin_20"
@@ -402,7 +386,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="64dp"
                     android:alpha="0.1"
                     android:background="@color/color_FFFFFF" />
             </LinearLayout>
@@ -417,8 +400,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
-                    android:paddingLeft="26dp"
-                    android:paddingRight="26dp">
+                    android:paddingLeft="26dp">
 
                     <ImageView
                         android:layout_width="@dimen/margin_20"
@@ -444,7 +426,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="56dp"
-                    android:layout_marginRight="64dp"
                     android:alpha="0.1"
                     android:background="@color/color_FFFFFF" />
             </LinearLayout>
