--- a/app/src/main/res/layout/item_account_history.xml
+++ b/app/src/main/res/layout/item_account_history.xml
@@ -27,7 +27,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="49dp"
+        android:minHeight="50dp"
         android:gravity="center"
         android:orientation="horizontal"
         tools:ignore="SpUsage">
@@ -44,9 +44,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize12sp"
+                android:textSize="@dimen/textSize14sp"
                 android:text="@{row.statDate}"
                 app:dateNoYear="@{row.statDate}"
+                android:fontFamily="@font/din_font"
                 app:autoSizeMaxTextSize="@dimen/textSize12sp"
                 app:autoSizeMinTextSize="@dimen/textSize8sp"
                 android:visibility="gone"
@@ -59,7 +60,8 @@
                 android:gravity="center"
                 app:dayOfWeek="@{row.statDate}"
                 android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize12sp"
+                android:textSize="@dimen/textSize14sp"
+                android:fontFamily="@font/din_font"
                 android:visibility="gone"
                 tools:text="星期一" />
 
@@ -69,7 +71,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/color_9BB3D9_535D76"
-                android:textSize="@dimen/textSize12sp"
+                android:textSize="@dimen/textSize14sp"
+                android:fontFamily="@font/din_font"
                 app:autoSizeMaxTextSize="@dimen/textSize12sp"
                 app:autoSizeMinTextSize="@dimen/textSize8sp"
                 tools:text="2022/08/13" />
@@ -83,10 +86,11 @@
             tools:text="8,117,500.000"
             android:gravity="center"
             android:text="@string/unknown_data"
+            android:fontFamily="@font/din_font"
             app:moneyFormat="@{row.settledBetMoney}"
             android:layout_marginStart="7dp"
             android:textColor="@color/color_9BB3D9_535D76"
-            android:textSize="@dimen/textSize12sp" />
+            android:textSize="@dimen/textSize14sp" />
 
         <TextView
             android:id="@+id/tv_bet_total_money"
@@ -95,11 +99,12 @@
             android:layout_marginStart="7dp"
             android:layout_weight="2"
             android:gravity="center"
+            android:fontFamily="@font/din_font"
             tools:text="9,959,500.000"
             android:text="@string/unknown_data"
             app:moneyFormat="@{row.validBetMoney}"
             android:textColor="@color/color_9BB3D9_535D76"
-            android:textSize="@dimen/textSize12sp" />
+            android:textSize="@dimen/textSize14sp" />
 
         <TextView
             android:id="@+id/tv_tv_win_lose_money"
@@ -108,13 +113,14 @@
             android:layout_marginStart="7dp"
             android:layout_weight="2"
             android:gravity="center"
+            android:fontFamily="@font/din_font"
             android:text="@string/unknown_data"
             app:moneyColor="@{row.vipRewardMoneyWithRebate}"
             app:moneyFormat="@{row.vipRewardMoneyWithRebate}"
             tools:text="-9,959,500.000"
             tools:textColor="@color/color_E23434_E23434"
             android:textColor="@color/color_9BB3D9_535D76"
-            android:textSize="@dimen/textSize12sp" />
+            android:textSize="@dimen/textSize14sp" />
 
     </LinearLayout>
 
