--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -15,17 +15,17 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="38dp"
             android:background="@color/color_F3F9FF"
             android:paddingHorizontal="@dimen/margin_15"
             android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/iv_sport"
-                android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:adjustViewBounds="true"
-            android:src="@drawable/ic_home_football_sel" />
+                android:layout_width="20dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_home_football_sel" />
 
         <TextView
             android:id="@+id/tv_sport_type"
@@ -38,7 +38,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="@dimen/margin_10"
             android:textColor="@color/color_025BE8"
-            android:textSize="@dimen/textSize12sp"
+            android:textSize="@dimen/textSize14sp"
             tools:text="@string/soccer" />
 
         <ImageView
