--- a/app/src/main/res/layout/item_language.xml
+++ b/app/src/main/res/layout/item_language.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="@dimen/margin_10"
-    android:gravity="center_vertical"
-    android:paddingHorizontal="4dp">
+    android:gravity="center_vertical">
 
     <ImageView
         android:id="@+id/iv_logo"
