--- a/app/src/main/res/layout/item_main_home_menu.xml
+++ b/app/src/main/res/layout/item_main_home_menu.xml
@@ -28,11 +28,12 @@
         android:id="@+id/iv_people"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginBottom="5dp"
         android:elevation="@dimen/margin_3"
         android:layout_gravity="right"
         android:adjustViewBounds="true"
-        android:src="@drawable/card_sport_esports" />
+        android:src="@drawable/card_sport_football" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,19 +48,21 @@
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
             android:textColor="@color/color_414655"
             android:textSize="20sp"
-            android:textFontWeight="600"
+            android:textStyle="bold"
             tools:text="足球" />
 
         <TextView
             android:id="@+id/tv_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:textColor="@color/color_025BE8"
             android:fontFamily="@font/din_font"
-            android:textFontWeight="700"
             android:textSize="32sp"
+            android:textStyle="bold"
             tools:text="2290" />
 
         <View
@@ -72,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_4"
             android:textColor="@color/color_6C7BA8"
-            android:fontFamily="@font/helvetica_bold"
+            android:fontFamily="@font/din_font"
             android:textSize="14sp"
             android:text="@string/sport_match" />
 
