--- a/app/src/main/res/layout/item_outright_catagory.xml
+++ b/app/src/main/res/layout/item_outright_catagory.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center_vertical"
+        android:elevation="1dp"
         android:background="@drawable/bg_catagory_radius_10"
         android:showDividers="end"
         android:paddingHorizontal="@dimen/margin_15">
@@ -42,6 +43,7 @@
             android:singleLine="true"
             android:textColor="@color/color_6C7BA8"
             android:textSize="@dimen/textSize12sp"
+            android:fontFamily="@font/din_font"
             tools:text="2022-11-05 20:00" />
 
     </LinearLayout>
