--- a/app/src/main/res/layout/item_sport_spinner.xml
+++ b/app/src/main/res/layout/item_sport_spinner.xml
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginHorizontal="10dp"
+        android:alpha="0.4"
         android:background="@color/color_6C7BA8_A7B2C4" />
 
 </LinearLayout>
