--- a/app/src/main/res/layout/itemview_date_v4.xml
+++ b/app/src/main/res/layout/itemview_date_v4.xml
@@ -18,6 +18,7 @@
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="@dimen/textSize12sp"
+        android:fontFamily="@font/din_font"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="TUE" />
 
@@ -29,7 +30,7 @@
         android:textAllCaps="true"
         android:textColor="@color/selector_date_item_text_v4"
         android:textSize="@dimen/textSize16sp"
-        android:fontFamily="@font/helvetica"
+        android:fontFamily="@font/din_font"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/date_text_week"
